# cu_kinova

cu_kinova_bringup/: CMakeLists.txt  package.xml
cu_kinova_bringup/config/: default.rviz
cu_kinova_bringup/launch/: hardware.launch  rviz.launch  spacemice.launch
cu_kinova_bringup/scriptpanel/: clear_faults.sh  launch_hardware.sh  move_to_ready.sh  move_to_resting.sh  move_to_zero.sh  scriptpanel.yaml  spacemice_teleop.sh
cu_kinova_description/: CMakeLists.txt  package.xml
cu_kinova_description/launch/: upload_description.launch
cu_kinova_description/robots/: default.urdf.xacro
cu_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cu_kinova_moveit_config/config/: cu_kinova.srdf  fake_controllers.yaml  gazebo_cu_kinova.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
cu_kinova_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
