<?xml version="1.0"?>
<package format="2">
  <name>cu_kinova_bringup</name>
  <version>0.0.0</version>
  <description>The cu_kinova_bringup package</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>kortex_driver</exec_depend>
  <exec_depend>kinova_vision</exec_depend>
  <exec_depend>cu_kinova_description</exec_depend>
  <exec_depend>cu_kinova_moveit_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>spacenav_ros</exec_depend>
</package>
