<?xml version="1.0"?>
<package format="2">
  <name>cu_kinova_description</name>
  <version>0.0.0</version>
  <description>The cu_kinova_description package</description>

  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
